# src/docs/openapi.yaml
@@ -158,6 +158,8 @@ paths:
                   createdAt:
                     type: string
                     format: date-time
+                  likes:
+                    type: integer
         '400':
           description: Validation error
         '404':
@@ -306,6 +308,68 @@ paths:
           description: Forbidden
         '404':
           description: Not found
+    post:
+      summary: Admin delete review
+      
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Deleted
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not found
+  /dishes/{id}/reviews/{reviewId}/like:
+    post:
+      summary: Create like for review
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: reviewId
+          required: true
+          schema:
+            type: integer
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  dishId:
+                    type: integer
+                  authorName:
+                    type: string
+                  body:
+                    type: string
+                  photoUrl:
+                    type: string
+                    nullable: true
+                  createdAt:
+                    type: string
+                    format: date-time
+                  likes:
+                    type: integer
+        '400':
+          description: Validation error
+        '404':
+          description: Dish not found
 components:
   securitySchemes:
     bearerAuth:
